bugfix: automatic vertical scrollbar visibility for lms-ui-combobox

--- a/img/style.less
+++ b/img/style.less
@@ -1606,11 +1606,16 @@ a.lms-ui-combobox-toggle {
 	background: url('dropdown.gif') !important;
 }
 
-.lms-ui-autocomplete .ui-menu-item {
-	.ui-menu-item-wrapper {
-		padding: 1px 1em 1px 0.4em;
-	}
-	&.matched {
-		background-color: @dark !important;
+.lms-ui-autocomplete {
+	max-height: 500px;
+	overflow-x: hidden;
+	overflow-y: auto;
+	& .ui-menu-item {
+		.ui-menu-item-wrapper {
+			padding: 1px 1em 1px 0.4em;
+		}
+		&.matched {
+			background-color: @dark !important;
+		}
 	}
 }
